# ruby_native_extensions

./: .gitignore  presentation.md
0_demo/c_day4/: Gemfile
0_demo/c_day4/ext/c_day4/: c_day4.c  c_day4.h  extconf.rb  range.h
0_demo/c_day4/lib/: c_day4.rb
0_demo/c_day4/spec/: c_day4_spec.rb  spec_helper.rb
0_demo/rs_day4/: .rubocop.yml  Gemfile  Rakefile
0_demo/rs_day4/ext/rs_day4/: Cargo.toml
0_demo/rs_day4/lib/rs_day4/: version.rb
0_demo/rs_day4/spec/: spec_helper.rb
1_hello_world/c_hello/: .rubocop.yml  Gemfile  LICENSE.txt  README.md  Rakefile  c_hello.gemspec
1_hello_world/c_hello/ext/c_hello/: c_hello.c  c_hello.h  extconf.rb
1_hello_world/c_hello/lib/: c_hello.rb
1_hello_world/c_hello/lib/c_hello/: version.rb
1_hello_world/c_hello/spec/: c_hello_spec.rb  spec_helper.rb
1_hello_world/rs_hello/: Cargo.toml  Gemfile  README.md  Rakefile  rs_hello.gemspec
1_hello_world/rs_hello/ext/rs_hello/: Cargo.toml  extconf.rb
1_hello_world/rs_hello/ext/rs_hello/src/: lib.rs
1_hello_world/rs_hello/lib/: rs_hello.rb
1_hello_world/rs_hello/lib/rs_hello/: version.rb
1_hello_world/rs_hello/spec/: rs_hello_spec.rb  spec_helper.rb
c_day4/: LICENSE.txt  README.md  Rakefile  c_day4.gemspec
c_day4/ext/c_day4/: c_day4.c  c_day4.h  extconf.rb  range.c
c_day4/lib/: c_day4.rb
c_day4/lib/c_day4/: version.rb
rs_day4/: Cargo.toml  Gemfile  README.md  Rakefile  rs_day4.gemspec
rs_day4/ext/rs_day4/: extconf.rb
rs_day4/ext/rs_day4/src/: lib.rs  parse.rs  range_ext.rs
rs_day4/lib/: rs_day4.rb
rs_day4/spec/: rs_day4_spec.rb
