[package]
name = "rs_day4"
version = "0.1.0"
edition = "2021"
authors = ["David Marchante <davidmarchan@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.3" }
nom = "7.1.3"
rayon = "1.10.0"
rb-sys = { version = "*", features = ["stable-api-compiled-fallback"] }
